@@ -16,6 +16,8 @@
 
 #import <Foundation/Foundation.h>
 
+#import "Three20/TTCorePreprocessorMacros.h"
+
 /**
  * Doxygen does not handle categories very well, so please refer to the .m file in general
  * for the documentation that is reflected on api.three20.info.
@@ -23,9 +25,19 @@
 @interface NSString (TTAdditions)
 
 /**
- * Determines if the string contains only whitespace.
+ * Determines if the string contains only whitespace and newlines.
  */ 
-- (BOOL)isWhitespace;
+- (BOOL)isWhitespaceAndNewlines;
+
+/**
+ * Determines if the string contains only whitespace.
+ *
+ * Deprecated due to the name not being clear. The new isWhiteSpcaeAndNewlines method is
+ * functionality identical, yet more proper in its naming.
+ *
+ * @deprecated
+ */
+- (BOOL)isWhitespace __TTDEPRECATED_METHOD;
 
 /**
  * Determines if the string is empty or contains only whitespace.
