@@ -79,25 +79,25 @@
   // From the Apple docs:
   // Returns a character set containing only the whitespace characters space (U+0020) and tab
   // (U+0009) and the newline and nextline characters (U+000A–U+000D, U+0085).
-  STAssertTrue([@"" isWhitespace], @"Empty string should be whitespace.");
-  STAssertTrue([@" " isWhitespace], @"Space character should be whitespace.");
-  STAssertTrue([@"\t" isWhitespace], @"Tab character should be whitespace.");
-  STAssertTrue([@"\n" isWhitespace], @"Newline character should be whitespace.");
-  STAssertTrue([@"\r" isWhitespace], @"Carriage return character should be whitespace.");
+  STAssertTrue([@"" isWhitespaceAndNewlines], @"Empty string should be whitespace.");
+  STAssertTrue([@" " isWhitespaceAndNewlines], @"Space character should be whitespace.");
+  STAssertTrue([@"\t" isWhitespaceAndNewlines], @"Tab character should be whitespace.");
+  STAssertTrue([@"\n" isWhitespaceAndNewlines], @"Newline character should be whitespace.");
+  STAssertTrue([@"\r" isWhitespaceAndNewlines], @"Carriage return character should be whitespace.");
 
   // Unicode whitespace
   for (int unicode = 0x000A; unicode <= 0x000D; ++unicode) {
     NSString* str = [NSString stringWithFormat:@"%C", unicode];
-    STAssertTrue([str isWhitespace], @"Unicode string #%X should be whitespace.", unicode);
+    STAssertTrue([str isWhitespaceAndNewlines], @"Unicode string #%X should be whitespace.", unicode);
   }
 
   NSString* str = [NSString stringWithFormat:@"%C", 0x0085];
-  STAssertTrue([str isWhitespace], @"Unicode string should be whitespace.");
+  STAssertTrue([str isWhitespaceAndNewlines], @"Unicode string should be whitespace.");
 
-  STAssertTrue([@" \t\r\n" isWhitespace], @"Empty string should be whitespace.");
+  STAssertTrue([@" \t\r\n" isWhitespaceAndNewlines], @"Empty string should be whitespace.");
 
-  STAssertTrue(![@"a" isWhitespace], @"Text should not be whitespace.");
-  STAssertTrue(![@" \r\n\ta\r\n " isWhitespace], @"Text should not be whitespace.");
+  STAssertTrue(![@"a" isWhitespaceAndNewlines], @"Text should not be whitespace.");
+  STAssertTrue(![@" \r\n\ta\r\n " isWhitespaceAndNewlines], @"Text should not be whitespace.");
 }
 
 
